# tools/ci/openapi.lock.json
@@ -2576,6 +2576,21 @@
      },
      {
       "in": "header",
+      "name": "if-none-match",
+      "required": false,
+      "schema": {
+       "anyOf": [
+        {
+         "type": "string"
+        },
+        {
+         "type": "null"
+        }
+       ]
+      }
+     },
+     {
+      "in": "header",
       "name": "authorization",
       "required": false,
       "schema": {
@@ -3177,6 +3192,36 @@
      },
      {
       "in": "header",
+      "name": "range",
+      "required": false,
+      "schema": {
+       "anyOf": [
+        {
+         "type": "string"
+        },
+        {
+         "type": "null"
+        }
+       ]
+      }
+     },
+     {
+      "in": "header",
+      "name": "if-range",
+      "required": false,
+      "schema": {
+       "anyOf": [
+        {
+         "type": "string"
+        },
+        {
+         "type": "null"
+        }
+       ]
+      }
+     },
+     {
+      "in": "header",
       "name": "authorization",
       "required": false,
       "schema": {
@@ -3452,6 +3497,21 @@
      },
      {
       "in": "header",
+      "name": "if-none-match",
+      "required": false,
+      "schema": {
+       "anyOf": [
+        {
+         "type": "string"
+        },
+        {
+         "type": "null"
+        }
+       ]
+      }
+     },
+     {
+      "in": "header",
       "name": "authorization",
       "required": false,
       "schema": {
@@ -3712,6 +3772,21 @@
      },
      {
       "in": "header",
+      "name": "if-none-match",
+      "required": false,
+      "schema": {
+       "anyOf": [
+        {
+         "type": "string"
+        },
+        {
+         "type": "null"
+        }
+       ]
+      }
+     },
+     {
+      "in": "header",
       "name": "authorization",
       "required": false,
       "schema": {
@@ -3944,6 +4019,21 @@
       "required": true,
       "schema": {
        "type": "string"
+      }
+     },
+     {
+      "in": "header",
+      "name": "if-match",
+      "required": false,
+      "schema": {
+       "anyOf": [
+        {
+         "type": "string"
+        },
+        {
+         "type": "null"
+        }
+       ]
       }
      },
      {
@@ -4761,6 +4851,36 @@
      },
      {
       "in": "header",
+      "name": "range",
+      "required": false,
+      "schema": {
+       "anyOf": [
+        {
+         "type": "string"
+        },
+        {
+         "type": "null"
+        }
+       ]
+      }
+     },
+     {
+      "in": "header",
+      "name": "if-range",
+      "required": false,
+      "schema": {
+       "anyOf": [
+        {
+         "type": "string"
+        },
+        {
+         "type": "null"
+        }
+       ]
+      }
+     },
+     {
+      "in": "header",
       "name": "authorization",
       "required": false,
       "schema": {
@@ -4991,6 +5111,21 @@
      },
      {
       "in": "header",
+      "name": "if-none-match",
+      "required": false,
+      "schema": {
+       "anyOf": [
+        {
+         "type": "string"
+        },
+        {
+         "type": "null"
+        }
+       ]
+      }
+     },
+     {
+      "in": "header",
       "name": "authorization",
       "required": false,
       "schema": {
@@ -5119,6 +5254,21 @@
       "required": true,
       "schema": {
        "type": "string"
+      }
+     },
+     {
+      "in": "header",
+      "name": "if-none-match",
+      "required": false,
+      "schema": {
+       "anyOf": [
+        {
+         "type": "string"
+        },
+        {
+         "type": "null"
+        }
+       ]
       }
      },
      {
@@ -5275,6 +5425,21 @@
       "required": true,
       "schema": {
        "type": "string"
+      }
+     },
+     {
+      "in": "header",
+      "name": "if-match",
+      "required": false,
+      "schema": {
+       "anyOf": [
+        {
+         "type": "string"
+        },
+        {
+         "type": "null"
+        }
+       ]
       }
      },
      {
@@ -6904,6 +7069,21 @@
      },
      {
       "in": "header",
+      "name": "if-none-match",
+      "required": false,
+      "schema": {
+       "anyOf": [
+        {
+         "type": "string"
+        },
+        {
+         "type": "null"
+        }
+       ]
+      }
+     },
+     {
+      "in": "header",
       "name": "authorization",
       "required": false,
       "schema": {
@@ -7096,6 +7276,21 @@
       "required": true,
       "schema": {
        "type": "string"
+      }
+     },
+     {
+      "in": "header",
+      "name": "if-none-match",
+      "required": false,
+      "schema": {
+       "anyOf": [
+        {
+         "type": "string"
+        },
+        {
+         "type": "null"
+        }
+       ]
       }
      },
      {
@@ -7332,6 +7527,21 @@
       "required": true,
       "schema": {
        "type": "string"
+      }
+     },
+     {
+      "in": "header",
+      "name": "if-match",
+      "required": false,
+      "schema": {
+       "anyOf": [
+        {
+         "type": "string"
+        },
+        {
+         "type": "null"
+        }
+       ]
       }
      },
      {
